new_signup_and_login_system part 3

--- a/client/callback.html
+++ b/client/callback.html
@@ -3,9 +3,7 @@
 
 <head>
     <script type="text/javascript">
-        parent.postMessage(window.location.hash, "https://localhost:9000/");
-
-        console.log(window.location.hash)
+        window.parent.postMessage(window.location.hash, "https://localhost:9000/");
     </script>
 </head>
 
